fix error Lab 5

--- a/Lab5-Using-Convolutions-With-Complex-Images.ipynb
+++ b/Lab5-Using-Convolutions-With-Complex-Images.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Lab5-Using-Convolutions-With-Complex-Images.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -638,7 +624,7 @@
         "      # Postprocess the feature to make it visually palatable\n",
         "      x = feature_map[0, :, :, i]\n",
         "      x -= x.mean()\n",
-        "      if x>0:\n",
+        "      if x.all()>0:\n",
         "        x /= x.std()\n",
         "      x *= 64\n",
         "      x += 128\n",
@@ -694,5 +680,19 @@
       "execution_count": null,
       "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Lab5-Using-Convolutions-With-Complex-Images.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
